--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -10,8 +10,32 @@
 <h1>{{title}}</h1>
 <h2>My Heroes</h2>
 <ul class="heroes">
-  <!-- each hero listing goes here -->
-  <li *ngFor="let hero of heroes">
+  <!--
+   each hero listing goes here.
+   When the expression (hero === selectedHero) is true,
+   Angular adds the selected CSS class.
+   When the expression is false,
+   Angular removes the selected class.
+  -->
+  <li *ngFor="let hero of heroes"
+      [class.selected]="hero === selectedHero"
+      (click)="onSelect(hero)">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
+
+<!--
+Don't forget the asterisk (*) in front of ngIf.
+Below section is to display selected hero details.
+-->
+
+<!-- Hero details -->
+<div *ngIf="selectedHero">
+  <h2>{{selectedHero.name}} details!</h2>
+  <div><label>id: </label>{{selectedHero.id}}</div>
+  <div>
+    <label>name: </label>
+    <input [(ngModel)]="selectedHero.name" placeholder="name"/>
+  </div>
+</div>
+<!-- End Hero details -->
