--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -30,12 +30,5 @@ Below section is to display selected hero details.
 -->
 
 <!-- Hero details -->
-<div *ngIf="selectedHero">
-  <h2>{{selectedHero.name}} details!</h2>
-  <div><label>id: </label>{{selectedHero.id}}</div>
-  <div>
-    <label>name: </label>
-    <input [(ngModel)]="selectedHero.name" placeholder="name"/>
-  </div>
-</div>
+<hero-detail [hero]="selectedHero"></hero-detail>
 <!-- End Hero details -->
